feat: Add icons to documentation metadata for improved visual representation
Enhance the documentation files by adding relevant icons to the metadata of AI Providers, Settings, Basic Commands, GitHub Integration, and PR Templates sections. This update improves the visual appeal and user experience of the documentation.

--- a/content/docs/usage/basic-commands.mdx
+++ b/content/docs/usage/basic-commands.mdx
@@ -1,6 +1,7 @@
 ---
 title: Basic Commands
 description: Learn all LazyPR commands and options
+icon: SquareTerminal
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
