--- a/content/docs/usage/github-integration.mdx
+++ b/content/docs/usage/github-integration.mdx
@@ -1,6 +1,7 @@
 ---
 title: GitHub Integration
 description: Create pull requests directly with GitHub CLI
+icon: CirclePlay
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
