--- a/content/docs/usage/templates.mdx
+++ b/content/docs/usage/templates.mdx
@@ -1,6 +1,7 @@
 ---
 title: PR Templates
 description: Use and customize PR templates with LazyPR
+icon: GitPullRequestArrow
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
