--- a/content/docs/config/providers.mdx
+++ b/content/docs/config/providers.mdx
@@ -1,6 +1,7 @@
 ---
 title: AI Providers
 description: Choose and configure AI providers for LazyPR
+icon: CloudLightning
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
