--- a/content/docs/config/settings.mdx
+++ b/content/docs/config/settings.mdx
@@ -1,6 +1,7 @@
 ---
 title: Settings
 description: Customize LazyPR behavior and preferences
+icon: Settings
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
