fix: Update documentation links for consistency and clarity
Correct links in the installation, quick start, and what-is-lazypr documents to ensure they point to the appropriate sections, enhancing user navigation and onboarding experience.

--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -70,4 +70,4 @@ lazypr config set GROQ_API_KEY=your_api_key_here
   Get your free Groq API key at [console.groq.com](https://console.groq.com).
 </Callout>
 
-You're now ready to generate your first PR! Continue to the [Quick Start](/docs/introduction/quick-start) guide.
+You're now ready to generate your first PR! Continue to the [Quick Start](/docs/quick-start) guide.
