--- a/content/docs/quick-start.mdx
+++ b/content/docs/quick-start.mdx
@@ -131,7 +131,7 @@ lazypr  # same as: lazypr master
 ## Next Steps
 
 Now that you've generated your first PR, explore more features:
-- [Configure settings](/docs/settings) to customize behavior
+- [Configure settings](/docs/config/settings) to customize behavior
 - [Use templates](/docs/usage/templates) for consistent PR formatting
 - [Try GitHub integration](/docs/usage/github-integration) to create PRs directly
 
@@ -139,7 +139,7 @@ Now that you've generated your first PR, explore more features:
 
 <Cards>
   <Card title="Installation" href="/docs/installation" description="Install LazyPR on your system" />
-  <Card title="AI Providers" href="/docs/providers" description="Choose AI providers and customize your settings" />
+  <Card title="AI Providers" href="/docs/config/providers" description="Choose AI providers and customize your settings" />
   <Card title="Usage Guide" href="/docs/usage/basic-commands" description="Learn all the commands and options" />
-  <Card title="Examples" href="/docs/examples/basic-workflow" description="See real-world examples and workflows" />
+  <Card title="Examples" href="/docs/examples/cli-usage" description="See real-world examples and workflows" />
 </Cards>
