--- a/content/docs/what-is-lazypr.mdx
+++ b/content/docs/what-is-lazypr.mdx
@@ -114,9 +114,9 @@ Clean, professional, and ready to submit.
 
 Ready to transform your PR workflow?
 
-1. [Install LazyPR](/docs/introduction/installation) in under 1 minute
-2. [Create your first PR](/docs/introduction/quick-start) in seconds
-3. [Configure providers](/docs/configuration/providers) to match your needs
+1. [Install LazyPR](/docs/installation) in under 1 minute
+2. [Create your first PR](/docs/quick-start) in seconds
+3. [Configure providers](/docs/config/providers) to match your needs
 
 <Callout type="info">
   LazyPR is actively maintained and open source. Contributions welcome on [GitHub](https://github.com/R4ULtv/lazypr)!
