fix: Update default target branch in documentation from 'master' to 'main'
Revise references to the default target branch in the Quick Start, configuration, and basic commands documentation to reflect the change from 'master' to 'main', ensuring consistency across the documentation.

--- a/content/docs/examples/configuration.mdx
+++ b/content/docs/examples/configuration.mdx
@@ -166,7 +166,7 @@ lazypr main --provider groq || lazypr main --provider cerebras
 | `CEREBRAS_API_KEY` | Cerebras API key | - |
 | `PROVIDER` | AI provider (`groq` or `cerebras`) | `groq` |
 | `MODEL` | Model to use | Provider default |
-| `DEFAULT_BRANCH` | Target branch for comparison | `master` |
+| `DEFAULT_BRANCH` | Target branch for comparison | `main` |
 | `LOCALE` | Output language | `en` |
 | `FILTER_COMMITS` | Filter merge/dependency commits | `true` |
 | `CONTEXT` | Custom context for AI | - |
