--- a/content/docs/quick-start.mdx
+++ b/content/docs/quick-start.mdx
@@ -122,10 +122,10 @@ Tested OAuth flow with Google and GitHub providers
 
 ## Default Target Branch
 
-If you don't specify a target branch, LazyPR defaults to `master`:
+If you don't specify a target branch, LazyPR defaults to `main`:
 
 ```bash
-lazypr  # same as: lazypr master
+lazypr  # same as: lazypr main
 ```
 
 ## Next Steps
