feat: Add OpenAI provider support and configuration options
Introduce OpenAI as a new AI provider, enabling compatibility with various local and third-party endpoints. Add configuration options for OpenAI API key and base URL, along with custom labels for PR generation and an extended color palette for label display. Update dependencies and enhance the dynamic label schema for improved validation and AI guidance.

--- a/content/docs/changelog.mdx
+++ b/content/docs/changelog.mdx
@@ -4,6 +4,23 @@ description: LazyPR's changelog detailing significant updates and improvements.
 icon: History
 ---
 
+## v1.4.0 - December 18, 2025
+
+### Added
+- **OPENAI PROVIDER SUPPORT:** Added OpenAI as a new AI provider option, enabling compatibility with OpenAI's API and any OpenAI-compatible endpoints. This includes support for:
+  - **Local providers:** Ollama (`http://localhost:11434/v1`), LM Studio (`http://localhost:1234/v1`), LocalAI
+  - **Third-party providers:** Together.ai, OpenRouter, and other services using the OpenAI API format
+  - **Self-hosted deployments:** Custom endpoints with OpenAI-compatible APIs
+- **OPENAI CONFIGURATION:** Added `OPENAI_API_KEY` and `OPENAI_BASE_URL` configuration options. The API key is optional for local providers that don't require authentication.
+- **CUSTOM LABELS:** Introduced the `CUSTOM_LABELS` configuration option, allowing users to define their own set of labels for PR generation. Users can now specify any labels used in their project instead of being limited to the default set (`enhancement`, `bug`, `documentation`).
+- **EXTENDED COLOR PALETTE:** Added an extended color palette for custom label display in the terminal, supporting a wider variety of label names with distinct colors.
+
+### Changed
+- **DEPENDENCIES:** Updated core dependencies including `@ai-sdk/cerebras`, `@ai-sdk/groq`, `ai`, `zod`, and `@types/bun` to their latest versions.
+- **DYNAMIC LABEL SCHEMA:** The label schema for PR generation is now dynamically built based on available labels (default or custom), providing better validation and AI guidance.
+
+---
+
 ## v1.3.4 - December 7, 2025
 
 ### Added
