--- a/content/docs/examples/github-actions.mdx
+++ b/content/docs/examples/github-actions.mdx
@@ -21,6 +21,7 @@ Go to your repository **Settings > Secrets and variables > Actions** and add:
 
 - `GROQ_API_KEY` - Your Groq API key
 - `CEREBRAS_API_KEY` - (Optional) For fallback support
+- `OPENAI_API_KEY` - (Optional) For OpenAI provider
 
 </Step>
 <Step>
