--- a/content/docs/quick-start.mdx
+++ b/content/docs/quick-start.mdx
@@ -18,7 +18,7 @@ npm install -g lazypr
 
 ## Key Features
 
-- **AI-Powered Generation**: Leverages Groq and Cerebras AI to create clear, consistent PR content
+- **AI-Powered Generation**: Leverages cloud AI (Groq, Cerebras, OpenAI) or local models (Ollama, LM Studio) to create clear, consistent PR content
 - **Smart Commit Filtering**: Automatically excludes merge commits, dependency updates, and formatting changes
 - **Multi-Language Support**: Generate PRs in 13 different languages
 - **GitHub CLI Integration**: Create pull requests directly with the `--gh` flag
