--- a/content/docs/what-is-lazypr.mdx
+++ b/content/docs/what-is-lazypr.mdx
@@ -37,7 +37,7 @@ That's it. LazyPR analyzes your commits, understands the changes, and generates 
 
 1. **Analyze Commits**: LazyPR reads all commits between your feature branch and target branch
 2. **Smart Filtering**: Automatically excludes merge commits, dependency updates, and noise
-3. **AI Generation**: Sends commit data to your chosen AI provider (Groq, Cerebras)
+3. **AI Generation**: Sends commit data to your chosen provider (cloud or local AI)
 4. **Professional Output**: Receives a formatted PR title and description
 5. **Easy Copy**: Interactive menu to copy to clipboard or create PR directly
 
@@ -71,7 +71,7 @@ Spend less time documenting and more time building. LazyPR handles the PR writin
 
 ## Features at a Glance
 
-- **Multi-Provider Support**: Choose between Groq and Cerebras AI providers
+- **Multi-Provider Support**: Choose between cloud providers (Groq, Cerebras, OpenAI) or run locally (Ollama, LM Studio)
 - **Smart Filtering**: Excludes irrelevant commits automatically
 - **Template Support**: Works with your existing `.github` PR templates
 - **Multilingual**: Generate PRs in 13 languages
